# Mathelium

./: CMakeLists.txt  main.cpp  mathelium.h
mathelium/include/: Algorithme.h  Complex.h  Matrix.h  Vec3D.h  Vector.h
mathelium/src/: Algorithme.cpp  Complex.cpp  Matrix.hpp  Vec3D.hpp  Vector.hpp
